# Omani-db-engine

./: CMakeLists.txt  main.c
include/: compiler.h  pager.h  repl.h  storage.h  vm.h
src/: compiler.c  pager.c  repl.c  storage.c  vm.c
tests/: omani.db  test.py
